[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main/Scripts/StartGame.gd" type="Script" id=1]
[ext_resource path="res://UI/Hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/GameBoard.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Debug.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/PortraitOrder.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Ressources.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Menus.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main/Scripts/Main.gd" type="Script" id=8]

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="GameBoard" parent="." instance=ExtResource( 3 )]

[node name="Ressources" parent="." instance=ExtResource( 6 )]

[node name="PortraitOrder" parent="." instance=ExtResource( 5 )]
margin_bottom = 124.0

[node name="Menus" parent="." instance=ExtResource( 7 )]

[node name="Hand" parent="." instance=ExtResource( 2 )]
margin_left = 1.49829
margin_top = 1.85822
margin_right = -23.0897
margin_bottom = -0.141785

[node name="AddCardDebug" parent="." instance=ExtResource( 4 )]
visible = false

[node name="StartGame" type="Node" parent="."]
script = ExtResource( 1 )
